fix: RestTemplate 파싱 불가능-> 직접 json Parsing