@@ -1,26 +1,34 @@
-package com.everyonegarden.weather.api;
+package com.everyonegarden.weather.service;
 
-import com.everyonegarden.weather.dto.WeatherResponseDto;
-import org.springframework.beans.factory.annotation.Value;
+import com.everyonegarden.weather.dto.ApiWeatherResponse;
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.stereotype.Service;
+import org.springframework.web.client.RestTemplate;
 
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URLEncoder;
 import java.text.ParseException;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
 
+
 //단기예보
-public class WeatherApi {
+@Service
+@RequiredArgsConstructor
+public class WeatherFetchService {
+
+   private final RestTemplate restTemplate ;
+   private final ApiWeatherResponseService apiWeatherResponseService;
 
     //EndPoint
-   @Value("${api.weather.url}") private String apiUrl ;
+   //@Value("${api.weather.url}") private String apiUrl ;
     //홈페이지에서 받은 키
-    @Value("${api.weather.secret}") private String serviceKey ;
+   // @Value("${api.weather.secret}") private String serviceKey ;
 
 
     static String[] time={"2300","2300",
@@ -32,8 +40,12 @@ public class WeatherApi {
                           "1700", "1700","1700",
                           "2000", "2000","2000","2300"};
 
-    public String getWeather(String nx, String ny) throws IOException, ParseException {
 
+    public ResponseEntity<ApiWeatherResponse> getWeather(String nx, String ny) throws IOException,URISyntaxException {
+
+
+        String apiUrl= "http://apis.data.go.kr/1360000/VilageFcstInfoService_2.0/getVilageFcst";
+        String serviceKey= "Wom3o6rUTrWsbJCTIyw5CZVEiXfr67Zl9u7L8d9XVbdaGqmssQdl2IjMkWSIDjZeP0JCUY%2BHi4sIrLoqqQVvrA%3D%3D";
 
         String baseDate = getTodayDate();
         String baseTime = getNearTime(); // 조회 시간  0200, 0500, 0800, 1100, 1400, 1700, 2000, 2300 (1일 8회)
@@ -48,42 +60,26 @@ public class WeatherApi {
         urlBuilder.append("?" + URLEncoder.encode("serviceKey", "UTF-8") + "=" + serviceKey);
         urlBuilder.append("&pageNo=1&numOfRows=10000");
         urlBuilder.append("&" + URLEncoder.encode("dataType","UTF-8") + "=" + URLEncoder.encode(type, "UTF-8"));
-        urlBuilder.append("&"+URLEncoder.encode("base_date","UTF-8")+"="+URLEncoder.encode(baseDate,"UTF-8"));//경도
-        urlBuilder.append("&"+URLEncoder.encode("base_time","UTF-8")+"="+URLEncoder.encode(baseTime,"UTF-8"));//경도
+        urlBuilder.append("&"+URLEncoder.encode("base_date","UTF-8")+"="+URLEncoder.encode(baseDate,"UTF-8"));
+        urlBuilder.append("&"+URLEncoder.encode("base_time","UTF-8")+"="+URLEncoder.encode(baseTime,"UTF-8"));
         urlBuilder.append("&"+URLEncoder.encode("nx","UTF-8")+"="+URLEncoder.encode(nx,"UTF-8"));//경도
         urlBuilder.append("&"+URLEncoder.encode("ny","UTF-8")+"="+URLEncoder.encode(ny,"UTF-8"));//위도
+
 
 
 
         /*
          * GET 방식으로 전송해서 파라미터 받아오기
          */
-        URL url = new URL(urlBuilder.toString());
-        System.out.println(url);
-        HttpURLConnection conn = (HttpURLConnection)url.openConnection();
-        conn.setRequestMethod("GET");
-        conn.setRequestProperty("Content-type","application/json");
+        URI uri = new URI(urlBuilder.toString());
+        ApiWeatherResponse weatherResponse = restTemplate.getForObject(uri, ApiWeatherResponse.class);
 
-        BufferedReader rd;
-        if(conn.getResponseCode() >=200 && conn.getResponseCode()<=300){
-            rd=new BufferedReader(new InputStreamReader(conn.getInputStream()));
-        }else{
-            rd = new BufferedReader(new InputStreamReader(conn.getErrorStream()));
-        }
-        StringBuilder sb = new StringBuilder();
-        String line;
-        while((line=rd.readLine())!=null){
-                sb.append(line);
-            }
-        rd.close();
-        conn.disconnect();
-        String result = sb.toString();
+        System.out.println(urlBuilder);
 
-
-        return result;
+        return new ResponseEntity<>(apiWeatherResponseService.getWeatherResult(weatherResponse.getRow()), HttpStatus.OK);
     }
 
-    /*
+    /*1`
     * 현재 날짜를 구하는 메서드
     */
     static String getTodayDate (){
